objects/ASI_CRM_SKU_Group__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Effective_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SKU that is available in stock and for operation. Effective SKU may not equal to Latest SKU.  Latest SKU may take effective in the future.</description>
        <inlineHelpText>SKU that is available in stock and for operation. Effective SKU may not equal to Latest SKU.  Latest SKU may take effective in the future.</inlineHelpText>
        <label>Effective SKU</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>SKU Groups</relationshipLabel>
        <relationshipName>SKU_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Related_SKU_Codes__c</fullName>
        <description>Display all related SKU Code, which belong to the same group. System could use it for query.</description>
        <inlineHelpText>Display all related SKU Code, which belong to the same group.</inlineHelpText>
        <label>Related SKU Codes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Related_SKU_Ids__c</fullName>
        <description>To display the related SKU system record Ids which belong to the same group. System could use in query.</description>
        <inlineHelpText>To display the related SKU system record Ids which belong to the same group</inlineHelpText>
        <label>Related SKU Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remark__c</fullName>
        <label>Remark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKU_Effective_Date__c</fullName>
        <description>Effective date of latest SKU take effective</description>
        <inlineHelpText>Effective date of latest SKU take effective</inlineHelpText>
        <label>SKU Effective Date</label>
        <type>Date</type>
    </fields>
    <label>SKU Group</label>
    <nameField>
        <label>SKU Group Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SKU Groups</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_MY_SKU_Group</fullName>
        <active>true</active>
        <label>MY SKU Group</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>